--- a/views/content/faq.html
+++ b/views/content/faq.html
@@ -7,8 +7,8 @@
 </div>
 <div class="container">
     <div class="faq-accordion">
-        <accordion>
-            <accordion-group is-open="">
+        <accordion close-others="oneAtATime">
+            <accordion-group is-open="status.open">
                <accordion-heading>
                    How does the online program work?
                </accordion-heading>
