--- a/views/content/healthpackages.html
+++ b/views/content/healthpackages.html
@@ -5,14 +5,14 @@
   </div>
 
   <div class="what-health-goal">
-    <h2 class="text-uppercase">Whats your health goal?</h2>
+    <h2 class="text-uppercase text-center">Whats your health goal?</h2>
 
     <div class="health-goals">
       <div class="container">
         <div class="row">
 
           <div class="col-md-6">
-            <div class="weight-goal">
+            <div class="weight-goal text-center">
               <img src="" alt="">
               <h3 class="text-uppercase">Weight Loss</h3>
               <p class="text-uppercase">(Includes health management)</p>
@@ -21,7 +21,7 @@
           </div>
 
           <div class="col-md-6">
-            <div class="health-manage-goal">
+            <div class="health-manage-goal text-center">
               <img src="" alt="">
               <h3 class="text-uppercase">Health Management</h3>
               <a href="" class="btn btn-primary text-uppercase">Know More</a>
