--- a/views/content/home.html
+++ b/views/content/home.html
@@ -1,213 +1,239 @@
 <div class="home-slider">
-    <flex-slider flex-slide="slide in homeslider track by $index" animation="slide" class="carousel" direction-nav="false">
-        <li>
-            <div class="slide-holder">
-                <img ng-src="{{slide}}">
-                <div class="slider-info get-center">
-                    <h2 class="text-uppercase">The calorie meter</h2>
-                    <p>Count Your Calories with our index customised to Indian food</p>
-                    <button class="text-uppercase btn btn-primary" type="button">Know more</button>
-                </div>
-            </div>
-        </li>
-    </flex-slider>
+  <flex-slider flex-slide="slide in homeslider track by $index" animation="slide" class="carousel" direction-nav="false">
+    <li>
+      <div class="slide-holder">
+        <img ng-src="{{slide}}">
+        <div class="slider-info get-center">
+          <h2 class="text-uppercase">The calorie meter</h2>
+          <p>Count Your Calories with our index customised to Indian food</p>
+          <button class="text-uppercase btn btn-primary" type="button">Know more</button>
+        </div>
+      </div>
+    </li>
+  </flex-slider>
 </div>
 <div class="container">
-    <div class="health-design">
-        <h5>Health design by suman agarwal</h5>
-        <div class="img-holder">
+  <div class="health-design">
+    <h5>Health design by suman agarwal</h5>
+    <div class="img-holder get-round">
+      <img src="" alt="" class="img-responsive">
+    </div>
+    <a href="#meet" class="text-uppercase">More about suman <i class="fa fa-angle-right"></i></a>
+  </div>
+  <div class="health-cat">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="health-info">
+          <h3 class="brand-primary title text-uppercase">Health Packages</h3>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+          <button class="btn text-uppercase" type="button">know more</button>
+          <div class="health-holder">
             <img src="" alt="" class="img-responsive">
+          </div>
         </div>
-        <a href="#meet" class="text-uppercase">More about suman ></a>
-    </div>
-    <div class="health-cat">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="health-info">
-                    <h3 class="brand-primary title text-uppercase">Health Packages</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-                    <button class="btn text-uppercase" type="button">know more</button>
-                    <div class="health-holder"><img src="" alt="" class="img-responsive"></div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="health-info">
-                    <h3 class="brand-primary title text-uppercase">Health Products</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-                    <button class="btn text-uppercase" type="button">know more</button>
-                    <div class="health-holder"><img src="" alt="" class="img-responsive"></div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="health-info">
-                    <h3 class="brand-primary title text-uppercase">cool sculpting</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-                    <button class="btn text-uppercase" type="button">know more</button>
-                    <div class="health-holder"><img src="" alt="" class="img-responsive"></div>
-                </div>
-            </div>
+      </div>
+      <div class="col-md-4">
+        <div class="health-info">
+          <h3 class="brand-primary title text-uppercase">Health Products</h3>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+          <button class="btn text-uppercase" type="button">know more</button>
+          <div class="health-holder">
+            <img src="" alt="" class="img-responsive">
+          </div>
         </div>
+      </div>
+      <div class="col-md-4">
+        <div class="health-info">
+          <h3 class="brand-primary title text-uppercase">cool sculpting</h3>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+          <button class="btn text-uppercase" type="button">know more</button>
+          <div class="health-holder">
+            <img src="" alt="" class="img-responsive">
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 <div class="brand-primary-bg">
-    <div class="container">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-offset-1 col-md-10">
         <div class="row">
-            <div class="col-md-offset-1 col-md-10">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="info">
-                            <div class="">
-                                <p>Total number of<span>Clients</span></p>
-                                <p>10348</p>
-                            </div>
-                            <div class="icon">
-                                <i class="fa fa-"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="info">
-                            <div class="">
-                                <p>Total<span>Weight Loss</span></p>
-                                <p>7500 <span>in kgs</span></p>
-                            </div>
-                            <div class="icon"><i class="fa fa-"></i></div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="info">
-                            <div class="">
-                                <p>Presence in<span>Countries</span></p>
-                                <p>38</p>
-                            </div>
-                            <div class="icon"><i class="fa fa-"></i></div>
-                        </div>
-                    </div>
-                </div>
+          <div class="col-md-4">
+            <div class="info">
+              <div class="">
+                <p>Total number of
+                  <span>Clients</span>
+                </p>
+                <p>10348</p>
+              </div>
+              <div class="icon">
+                <i class="fa fa-"></i>
+              </div>
             </div>
+          </div>
+          <div class="col-md-4">
+            <div class="info">
+              <div class="">
+                <p>Total
+                  <span>Weight Loss</span>
+                </p>
+                <p>7500
+                  <span>in kgs</span>
+                </p>
+              </div>
+              <div class="icon"><i class="fa fa-"></i></div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="info">
+              <div class="">
+                <p>Presence in
+                  <span>Countries</span>
+                </p>
+                <p>38</p>
+              </div>
+              <div class="icon"><i class="fa fa-"></i></div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
 <div class="bg">
-    <div class="container">
-        <div class="slider"></div>
-    </div>
+  <div class="container">
+    <div class="slider"></div>
+  </div>
 </div>
 <div class="health-diet">
-    <div class="container">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-offset-1 col-md-10">
         <div class="row">
-            <div class="col-md-offset-2 col-md-8">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="diet-info">
-                            <h4>RECIPES</h4>
-                            <div class="diet-holder">
-                                <img src="" alt="" class="img-responsive">
-                            </div>
-                            <p class="descp">Recipes that help you eat right without compromising on taste.</p>
-                            <div class="more text-center">
-                                <button class="btn btn-primary text-uppercase" type="button">Try them</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="diet-info">
-                            <h4>CALORIE METER</h4>
-                            <div class="diet-holder">
-                                <img src="" alt="" class="img-responsive">
-                            </div>
-                            <p class="descp">Browse through nutritional information of your favourite foods with this easy to use calculator and learn which foods and beverages work for your waistline and which don't.</p>
-                            <div class="more text-center">
-                                <button class="btn btn-primary text-uppercase" type="button">track them</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+          <div class="col-md-6">
+            <div class="diet-info">
+              <h4>RECIPES</h4>
+              <div class="diet-holder">
+                <img src="" alt="" class="img-responsive">
+              </div>
+              <p class="descp">Recipes that help you eat right without compromising on taste.</p>
+              <div class="more text-center">
+                <button class="btn btn-primary text-uppercase" type="button">Try them</button>
+              </div>
             </div>
+          </div>
+          <div class="col-md-6">
+            <div class="diet-info">
+              <h4>CALORIE METER</h4>
+              <div class="diet-holder">
+                <img src="" alt="" class="img-responsive">
+              </div>
+              <p class="descp">Browse through nutritional information of your favourite foods with this easy to use calculator and learn which foods and beverages work for your waistline and which don't.</p>
+              <div class="more text-center">
+                <button class="btn btn-primary text-uppercase" type="button">track them</button>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
 <div class="blog bg">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="blog">
-                    <div class="heading">
-                        <h5>BLOG</h5>
-                    </div>
-                    <div class="blog-info">
-                        <div class="blog-imgholder">
-                            <img src="" alt="" class="img-responsive">
-                        </div>
-                        <div class="blog-info">
-                            <p>Anti Ageing Tips</p>
-                        </div>
-                    </div>
-                    <div class="blog-info">
-                        <div class="blog-imgholder">
-                            <img src="" alt="" class="img-responsive">
-                        </div>
-                        <div class="blog-info">
-                            <p>Calcium For All Ages And Genders</p>
-                        </div>
-                    </div>
-                    <div class="blog-info">
-                        <div class="blog-imgholder">
-                            <img src="" alt="" class="img-responsive">
-                        </div>
-                        <div class="blog-info">
-                            <p>Calories In Cocktails</p>
-                        </div>
-                    </div>
-                    <div class="text-right">
-                        <button class="text-uppercase btn btn-primary" type="button">Read more</button>
-                    </div>
-                </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="blog">
+          <div class="heading">
+            <h5>BLOG</h5>
+          </div>
+          <div class="blog-info">
+            <div class="blog-imgholder">
+              <img src="" alt="" class="img-responsive">
             </div>
-            <div class="col-md-6">
-                <div class="askqts">
-                    <h5>ASK <span>SUMAN</span></h5>
-                    <p>Ask and get an answer on the healthiest food tips</p>
-                    <form action="">
-                        <select name="" id="" class="form-control">
-                            <option value="">Choose a Category</option>
-                        </select>
-                        <div class="form-group">
-                            <div class="col-md-6">
-                                <input type="text" class="form-control" placeholder="Name">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Email">
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control" name="" id="" cols="30" rows="10" placeholder="Type your question here..."></textarea>
-                        </div>
-                    </form>
-                    <div class="text-right">
-                        <button class="text-uppercase btn btn-primary" type="submit">Submit</button>
-                    </div>
-                </div>
+            <div class="blog-info">
+              <p>Anti Ageing Tips</p>
             </div>
+          </div>
+          <div class="blog-info">
+            <div class="blog-imgholder">
+              <img src="" alt="" class="img-responsive">
+            </div>
+            <div class="blog-info">
+              <p>Calcium For All Ages And Genders</p>
+            </div>
+          </div>
+          <div class="blog-info">
+            <div class="blog-imgholder">
+              <img src="" alt="" class="img-responsive">
+            </div>
+            <div class="blog-info">
+              <p>Calories In Cocktails</p>
+            </div>
+          </div>
+          <div class="text-right">
+            <button class="text-uppercase btn btn-primary" type="button">Read more</button>
+          </div>
         </div>
+      </div>
+      <div class="col-md-6">
+        <div class="askqts">
+          <h5>ASK
+            <span>SUMAN</span>
+          </h5>
+          <p>Ask and get an answer on the healthiest food tips</p>
+          <form action="">
+            <select name="" id="" class="form-control">
+              <option value="">Choose a Category</option>
+              <option value="">Category 1</option>
+              <option value="">Category 2</option>
+              <option value="">Category 3</option>
+            </select>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Name">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input type="email" class="form-control" placeholder="Email">
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <textarea class="form-control" name="" id="" cols="30" rows="10" placeholder="Type your question here..."></textarea>
+            </div>
+          </form>
+          <div class="text-right">
+            <button class="text-uppercase btn btn-primary" type="submit">Submit</button>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 <div class="container">
-    <div class="aboutus">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="about-info">
-                    <h3 class="text-uppercase">About us</h3>
-                    <p>Only the fit know how fabulous it feels.</p>
-                    <p>At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness...</p>
-                    <div class="more"><button class="text-uppercase btn btn-primary">know more</button></div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="abt-imgholder">
-                    <img src="" alt="" class="img-responsive">
-                </div>
-            </div>
+  <div class="aboutus">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="about-info">
+          <h3 class="text-uppercase">About us</h3>
+          <p>Only the fit know how fabulous it feels.</p>
+          <p>At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced
+            guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness...</p>
+          <div class="more">
+            <button class="text-uppercase btn btn-primary">know more</button>
+          </div>
         </div>
+      </div>
+      <div class="col-md-6">
+        <div class="about-imgholder">
+          <img src="" alt="" class="img-responsive">
+        </div>
+      </div>
     </div>
+  </div>
 </div>
