--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -5,11 +5,11 @@
   </div>
 
   <div class="container">
-    <div class="consult-detail">
+    <div class="consult-detail get-up">
       <p>An AICI consultant, Tina is a PersonalImage consultant, Corporate Speaker and Personal Stylist.She has a masters degree in Luxury Marketing and Management fom France. She has practiced her image and Grooming skills in the luxury industry in fashion across the globe in France, Germany, China and Hong Kong.</p>
       <p>Tina hopes to empower people by teaching them the power of Image and Personal Branding.</p>
       <p>Her personal styling services caters to clients at all ages from 14 years onwards men, women and younger girls. Her services involve personal styling for men and women, bridal and trousseau services as well as corporate image management.</p>
-      <p>Her recent achievements include; A diploma in Personal Branding & Menswear from the prestigious Image Professional Institute - NY, USA.</p>
+      <p>Her recent achievements include; A diploma in Personal Branding &amp; Menswear from the prestigious Image Professional Institute - NY, USA.</p>
       <p>Adding to this she is now part of the faculty at Fashion Institute and representative of UK-Nottingham Mumbai Pearl Academy.</p>
     </div>
   </div>
@@ -22,7 +22,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">The Analysis</h3>
+              <h3 class="text-uppercase">The <span>Analysis</span></h3>
             </div>
             <p>Discover your best colors, body shape to know you best fit and style</p>
           </div>
@@ -32,7 +32,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">Wardrobe Management</h3>
+              <h3 class="text-uppercase">Wardrobe <span>Management</span></h3>
             </div>
             <p>Develop a wardrobe that projects your personality</p>
           </div>
@@ -44,7 +44,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">The Grooming</h3>
+              <h3 class="text-uppercase">The <span>Grooming</span></h3>
             </div>
             <p>Basic Makeup application &amp; Hair styling</p>
           </div>
@@ -54,7 +54,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">Personalized Shopping</h3>
+              <h3 class="text-uppercase">Personalized <span>Shopping</span></h3>
             </div>
             <p>Sttyling &amp; enhancing the way your dress</p>
           </div>
@@ -66,7 +66,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">Advanced Make-up</h3>
+              <h3 class="text-uppercase">Advanced <span>Make-up</span></h3>
             </div>
             <p>Advanced makeup application &amp; Makeup buying for the client</p>
           </div>
@@ -76,7 +76,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">Personalized Styling</h3>
+              <h3 class="text-uppercase">Personalized <span>Styling</span></h3>
             </div>
             <p>Building the wardrobe - Learn how to shop future</p>
           </div>
@@ -88,7 +88,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">Hair &amp; Styling</h3>
+              <h3 class="text-uppercase">Hair <span>&amp; Styling</span></h3>
             </div>
             <p>care &amp; styling &amp; quick tips for easy maintenance</p>
           </div>
@@ -98,7 +98,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">Accessorizing &amp; Styling</h3>
+              <h3 class="text-uppercase">Accessorizing <span>&amp; Styling</span></h3>
             </div>
             <p>Accessorizing and styling with statement pieces</p>
           </div>
@@ -194,7 +194,7 @@
               </div>
             </div>
           </div>
-          
+
           <div class="col-md-6">
             <div class="single-session">
               <div class="row">
