--- a/views/content/login.html
+++ b/views/content/login.html
@@ -1,4 +1,4 @@
-<div class="login-tab">
+<div class="login-tab get-center">
     <tabset>
         <tab heading="Sign up">
             <div class="login-form">
@@ -40,7 +40,7 @@
                     <span>or</span>
                     <p>sign up via</p>
                 </div>
-                <div class="social-btn">
+                <div class="social-btn text-center">
                     <div class="btn-round">
                         <button type="button"><i class="fa fa-facebook"></i></button>
                     </div>
@@ -71,7 +71,7 @@
                     <span>or</span>
                     <p>sign up via</p>
                 </div>
-                <div class="social-btn">
+                <div class="social-btn text-center">
                     <div class="btn-round">
                         <button type="button"><i class="fa fa-facebook"></i></button>
                     </div>
