--- a/views/content/productcategory.html
+++ b/views/content/productcategory.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="container">
-    <div class="product-detail">
+    <div class="product-detail get-up">
       <p></p>
     </div>
   </div>
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <div class="single-category">
+          <div class="single-category text-center">
             <div class="category-image">
               <img src="" alt="">
             </div>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="col-md-6">
-          <div class="single-category">
+          <div class="single-category text-center">
             <div class="category-image">
               <img src="" alt="">
             </div>
@@ -33,7 +33,7 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <div class="single-category">
+          <div class="single-category text-center">
             <div class="category-image">
               <img src="" alt="">
             </div>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="col-md-6">
-          <div class="single-category">
+          <div class="single-category text-center">
             <div class="category-image">
               <img src="" alt="">
             </div>
