--- a/views/header.html
+++ b/views/header.html
@@ -25,7 +25,7 @@
           <div class="links">
 
             <div class="row">
-              <div class="col-md-3">
+              <div class="col-md-6">
                 <div class="social-links">
                   <ul>
                     <li><a href="#/cart"><i class="fa fa-"></i></a></li>
@@ -37,14 +37,14 @@
                   </ul>
                 </div>
               </div>
-              <div class="col-md-2">
+              <div class="col-md-3">
                 <div class="contact-tel">
                   <a href="tel:+912261312222">+91 22 6131 2222</a>
                 </div>
               </div>
-              <div class="col-md-1">
+              <div class="col-md-3">
                 <div class="signin">
-                  <a href="#">Sign In</a>
+                  <a href="#" ng-click="">Sign In</a>
                 </div>
               </div>
             </div>
