--- a/views/content/home.html
+++ b/views/content/home.html
@@ -221,7 +221,7 @@
       <div class="col-md-6">
         <div class="about-info">
           <h3 class="text-uppercase">About us</h3>
-          <p>Only the fit know how fabulous it feels.</p>
+          <h5>Only the fit know how fabulous it feels.</h5>
           <p>At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced
             guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness...</p>
           <div class="more">
