--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,14 +6,69 @@
 
 /* Bootstrap Variables Goes Here */
 
-$brand-primary: #0d9dff !default;
+//$brand-primary: #0d9dff !default;
 $brand-success: #84ce3c !default;
 $brand-warning: #ffec39 !default;
 $brand-danger: #fc483f !default;
 $brand-info: #000072 !default;
 
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
+$brand-primary: #e96542 !default; //Orange
+$brand-primary-light: #f4b2a1 !default; //LightOrange
+$brand-brown: #c2a388 !default; //Brown
+$brand-brown-light: #e6d9ce !default; //BrownLight
+$brand-brown-dark: #3b1808 !default; //BrownDark
+$brand-brown-dark2: #2d1205 !default; //BrownDark2
+$brand-brown-gray: #998675 !default; //BrownGray
+$brand-yellow: #f2921d !default; //Yellow
+$brand-blue: #5184c5 !default; //Blue
 
+$font-color: #242424 !default;
+$body-bg: #fff !default;
+$text-color: $font-color !default;
+$section-bg: #d3d3d3 !default;
+$link-color: $font-color !default;
+$link-hover-color: $font-color !default;
+$link-hover-decoration: none !default;
+
+$font-family-sans-serif: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-family-serif: "Lato", Georgia, "Times New Roman", Times, serif !default;
+$font-funky: "Lemonade", "Helvetiva Neue", Helvetica !default;
+$font-loading: "Exo 2", "Helvetiva Neue", Helvetica !default;
+
+$border-radius-base: 0 !default;
+$border-radius-large: 0 !default;
+$border-radius-small: 0 !default;
+
+$facebook: #3a579d !default;
+$google: #dd4d3c !default;
+$twitter: #49c8f5 !default;
+$instagram: #396d9a !default;
+
+.brand-primary { color: $brand-primary; }
+.brand-primary-light { color: $brand-primary-light; }
+.brand-brown { color: $brand-brown; }
+.brand-brown-light { color: $brand-brown-light; }
+.brand-brown-dark { color: $brand-brown-dark; }
+.brand-brown-dark2 { color: $brand-brown-dark2; }
+.brand-brown-gray { color: $brand-brown-gray; }
+.brand-yellow { color: $brand-yellow; }
+.brand-blue { color: $brand-blue; }
+
+.brand-primary-bg { background-color: $brand-primary; }
+.brand-primary-light-bg { background-color: $brand-primary-light; }
+.brand-brown-bg { background-color: $brand-brown; }
+.brand-brown-light-bg { background-color: $brand-brown-light; }
+.brand-brown-dark-bg { background-color: $brand-brown-dark; }
+.brand-brown-dark2-bg { background-color: $brand-brown-dark2; }
+.brand-brown-gray-bg { background-color: $brand-brown-gray; }
+.brand-yellow-bg { background-color: $brand-yellow; }
+.brand-blue-bg { background-color: $brand-blue; }
+
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 body {
   padding-top: 70px;
 }
@@ -33,4 +88,27 @@ img.doneLoading {
 nav li:hover .dropdown-menu {
   display: block;
 }
+a {
+  @include transition(all 300ms ease);
+  text-decoration: none !important;
+  outline: none !important;
+  cursor: pointer;
+}
+ul {
+  padding: 0;
+  li { list-style: none; }
+}
+
+// Class
+.m-center { margin: 0 auto; }
+.get-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  @include transform(translate(-50%, -50%));
+}
+.get-up { margin-top: -100px; }
+.inline-block { display: inline-block; }
+.block { display: block; }
+
 /* Start writing sass here */
