--- a/sass/main.scss
+++ b/sass/main.scss
@@ -107,7 +107,10 @@ ul {
   left: 50%;
   @include transform(translate(-50%, -50%));
 }
-.get-up { margin-top: -100px; }
+.get-up {
+  margin-top: -100px;
+  padding: 20px 50px;
+}
 .inline-block { display: inline-block; }
 .block { display: block; }
 
