--- a/views/footermenu.html
+++ b/views/footermenu.html
@@ -1,12 +1,12 @@
 <div class="health-foot">
     <div class="row-flex">
         <div class="col-flex">
-            <div class="health-back">
+            <div class="health-back relate">
                 <button class="get-center text-uppercase" type="button">health packages</button>
             </div>
         </div>
         <div class="col-flex">
-            <div class="health-back">
+            <div class="health-back relate">
                 <button class="get-center text-uppercase" type="button">health shop</button>
             </div>
         </div>
