--- a/views/content/home.html
+++ b/views/content/home.html
@@ -1,11 +1,11 @@
 <div class="home-slider">
   <flex-slider flex-slide="slide in homeslider track by $index" animation="slide" class="carousel" direction-nav="false">
     <li>
-      <div class="slide-holder">
-        <img ng-src="{{slide}}">
-        <div class="slider-info get-center">
-          <h2 class="text-uppercase">The calorie meter</h2>
-          <p>Count Your Calories with our index customised to Indian food</p>
+      <div class="slide-holder relate">
+        <img ng-src="{{slide.img}}">
+        <div class="slider-info get-center text-center">
+          <h2 class="text-uppercase">The calorie meter{{title.img}}</h2>
+          <p>Count Your Calories with our index customised to Indian food{{descp.img}}</p>
           <button class="text-uppercase btn btn-primary" type="button">Know more</button>
         </div>
       </div>
@@ -13,7 +13,7 @@
   </flex-slider>
 </div>
 <div class="container">
-  <div class="health-design">
+  <div class="health-design brand-brown-bg">
     <h5>Health design by suman agarwal</h5>
     <div class="img-holder get-round">
       <img src="" alt="" class="img-responsive">
@@ -34,7 +34,7 @@
       </div>
       <div class="col-md-4">
         <div class="health-info">
-          <h3 class="brand-primary title text-uppercase">Health Products</h3>
+          <h3 class="brand-yellow title text-uppercase">Health Products</h3>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
           <button class="btn text-uppercase" type="button">know more</button>
           <div class="health-holder">
@@ -44,7 +44,7 @@
       </div>
       <div class="col-md-4">
         <div class="health-info">
-          <h3 class="brand-primary title text-uppercase">cool sculpting</h3>
+          <h3 class="brand-blue title text-uppercase">cool sculpting</h3>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
           <button class="btn text-uppercase" type="button">know more</button>
           <div class="health-holder">
@@ -62,20 +62,20 @@
         <div class="row">
           <div class="col-md-4">
             <div class="info">
-              <div class="">
+              <div class=" inline-block">
                 <p>Total number of
                   <span>Clients</span>
                 </p>
                 <p>10348</p>
               </div>
-              <div class="icon">
-                <i class="fa fa-"></i>
+              <div class="icon inline-block">
+                <img src="img/user.png" alt="" class="img-responsive">
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="info">
-              <div class="">
+            <div class="info ">
+              <div class="inline-block">
                 <p>Total
                   <span>Weight Loss</span>
                 </p>
@@ -83,18 +83,22 @@
                   <span>in kgs</span>
                 </p>
               </div>
-              <div class="icon"><i class="fa fa-"></i></div>
+              <div class="icon inline-block">
+                  <img src="img/weight-meter.png" alt="" class="img-responsive">
+              </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="info">
-              <div class="">
+            <div class="info ">
+              <div class="inline-block">
                 <p>Presence in
                   <span>Countries</span>
                 </p>
                 <p>38</p>
               </div>
-              <div class="icon"><i class="fa fa-"></i></div>
+              <div class="icon inline-block">
+                  <img src="img/world.png" alt="" class="img-responsive">
+              </div>
             </div>
           </div>
         </div>
@@ -102,7 +106,7 @@
     </div>
   </div>
 </div>
-<div class="bg">
+<div class="brand-brown-bg">
   <div class="container">
     <div class="slider"></div>
   </div>
@@ -114,9 +118,9 @@
         <div class="row">
           <div class="col-md-6">
             <div class="diet-info">
-              <h4>RECIPES</h4>
+              <h4 class="text-center">RECIPES</h4>
               <div class="diet-holder">
-                <img src="" alt="" class="img-responsive">
+                <img src="img/recipes.png" alt="" class="img-responsive">
               </div>
               <p class="descp">Recipes that help you eat right without compromising on taste.</p>
               <div class="more text-center">
@@ -126,9 +130,9 @@
           </div>
           <div class="col-md-6">
             <div class="diet-info">
-              <h4>CALORIE METER</h4>
+              <h4 class="text-center">CALORIE METER</h4>
               <div class="diet-holder">
-                <img src="" alt="" class="img-responsive">
+                <img src="img/calorie.png" alt="" class="img-responsive">
               </div>
               <p class="descp">Browse through nutritional information of your favourite foods with this easy to use calculator and learn which foods and beverages work for your waistline and which don't.</p>
               <div class="more text-center">
@@ -141,11 +145,11 @@
     </div>
   </div>
 </div>
-<div class="blog bg">
+<div class="blog brand-brown-gray-bg">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <div class="blog">
+        <div class="blog brand-graylight-bg">
           <div class="heading">
             <h5>BLOG</h5>
           </div>
@@ -179,7 +183,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="askqts">
+        <div class="askqts brand-graylight-bg">
           <h5>ASK
             <span>SUMAN</span>
           </h5>
