--- a/views/content/home.html
+++ b/views/content/home.html
@@ -4,8 +4,8 @@
       <div class="slide-holder relate">
         <img ng-src="{{slide.img}}">
         <div class="slider-info get-center text-center">
-          <h2 class="text-uppercase">The calorie meter{{title.img}}</h2>
-          <p>Count Your Calories with our index customised to Indian food{{descp.img}}</p>
+          <h2 class="text-uppercase">{{slide.title}}</h2>
+          <p>{{slide.descp}}</p>
           <button class="text-uppercase btn btn-primary" type="button">Know more</button>
         </div>
       </div>
