--- a/views/header.html
+++ b/views/header.html
@@ -6,16 +6,18 @@
         <div class="col-md-6">
 
           <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-1">
               <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="brand-primary-bg one"></span>
+                <span class="brand-primary-bg two"></span>
+                <span class="brand-primary-bg three"></span>
               </div>
             </div>
-            <div class="col-md-10">
+            <div class="col-md-11">
               <div class="logo">
-                <h1><img src="" alt=""></h1>
+                <h1>
+                  <img src="img/logo.png" alt="">
+                </h1>
               </div>
             </div>
           </div>
@@ -28,23 +30,23 @@
               <div class="col-md-6">
                 <div class="social-links">
                   <ul>
-                    <li><a href="#/cart"><i class="fa fa-"></i></a></li>
-                    <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://instagram.com/"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://www.youtube.com/"><i class="fa fa-youtube"></i></a></li>
-                    <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest"></i></a></li>
+                    <li><a href="#/cart"><i class="fa fa-shopping-cart brand-primary"></i></a></li>
+                    <li><a href="https://www.facebook.com/"><i class="fa fa-facebook brand-primary"></i></a></li>
+                    <li><a href="https://twitter.com/"><i class="fa fa-twitter brand-primary"></i></a></li>
+                    <li><a href="https://instagram.com/"><i class="fa fa-instagram brand-primary"></i></a></li>
+                    <li><a href="https://www.youtube.com/"><i class="fa fa-youtube brand-primary"></i></a></li>
+                    <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest-p brand-primary"></i></a></li>
                   </ul>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-4">
                 <div class="contact-tel">
-                  <a href="tel:+912261312222">+91 22 6131 2222</a>
+                  <a class="brand-primary" href="tel:+912261312222">+91 22 6131 2222</a>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-2">
                 <div class="signin">
-                  <a href="#" ng-click="">Sign In</a>
+                  <a class="brand-primary text-uppercase" href="#" ng-click="">Sign In</a>
                 </div>
               </div>
             </div>
